--- a/zeiterfassung/src/components/Content/content.css
+++ b/zeiterfassung/src/components/Content/content.css
@@ -247,22 +247,75 @@
 
 .calendar .react-calendar__tile--now {
   background: var(--primary-color);
-  color: white;
+  color: rgb(0, 0, 0);
   border-radius: 50%;
 }
 
 .calendar .react-calendar__tile--active {
   background: var(--active-bg-color);
-  color: white;
+  color: rgb(0, 0, 0);
   border-radius: 50%;
   transform: scale(1.1);
 }
 
+/* Calendar Navigation Styling */
+.react-calendar__navigation__label,
+.react-calendar__navigation__arrow.react-calendar__navigation__prev2-button,
+.react-calendar__navigation__arrow.react-calendar__navigation__next-button,
+.react-calendar__navigation__arrow.react-calendar__navigation__next2-button,
+.react-calendar__navigation__arrow.react-calendar__navigation__prev-button,
+.react-calendar__navigation__label__labelText,
+.react-calendar__navigation__label__labelText--from {
+  color: black;
+}
 
+/* Calendar Tile Styling */
+.react-calendar__tile.react-calendar__year-view__months__month {
+  color: black;
+  background-color: var(--card-bg-color);
+  border-radius: 10px;
+  padding: 10px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.react-calendar__tile.react-calendar__year-view__months__month:hover {
+  background-color: var(--hover-bg-color);
+  transform: scale(1.05);
+}
+
+/* Profile Image Styling */
 .profile-image {
   width: 150px;
   height: 150px;
   border-radius: 50%;
   object-fit: cover;
   margin-right: 20px;
+}
+
+/* Profile Actions Styling */
+.profile-actions {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.profile-actions button {
+  width: auto; /* Make buttons narrower */
+  padding: 10px;
+  font-size: var(--text-size);
+  background-color: var(--button-bg-color);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-actions button:hover {
+  background-color: var(--button-hover-bg);
+  transform: scale(1.05);
 }
