--- a/zeiterfassung/src/components/Content/General.css
+++ b/zeiterfassung/src/components/Content/General.css
@@ -36,97 +36,12 @@
   align-items: stretch;
 }
 
-/* General Card Styling */
-.card-profile-card,
-.card-tasks-card,
-.card-vacation-card,
-.card-terminal-card,
-.card-time-card,
-.card-calendar-card {
-  background-color: var(--card-bg-color);
-  border-radius: var(--border-radius);
-  box-shadow: var(--box-shadow);
-  padding: var(--gap);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  box-sizing: border-box;
-  width: 100%;
-  max-width: 350px;
-  margin: 0 auto;
-}
 
-/* Equal height for all cards */
-.dashboard-grid > div {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
 
-/* Hover and Focus Effects */
-.card-profile-card:hover,
-.card-tasks-card:hover,
-.card-vacation-card:hover,
-.card-terminal-card:hover,
-.card-time-card:hover,
-.card-calendar-card:hover,
-.card-profile-card:focus,
-.card-tasks-card:focus,
-.card-vacation-card:focus,
-.card-terminal-card:focus,
-.card-time-card:focus,
-.card-calendar-card:focus {
-  transform: translateY(-5px);
-  box-shadow: var(--hover-box-shadow);
-  outline: none;
-}
-
-/* Heading Styling */
-.card-profile-card h2,
-.card-tasks-card h2,
-.card-vacation-card h2,
-.card-terminal-card h2,
-.card-time-card h2,
-.card-calendar-card h2 {
-  font-size: var(--heading-size);
-  color: var(--secondary-color);
-  margin-bottom: 10px;
-}
-
-/* Paragraph Styling */
-.card-profile-card p,
-.card-tasks-card p,
-.card-vacation-card p,
-.card-terminal-card p,
-.card-time-card p,
-.card-calendar-card p {
-  font-size: var(--text-size);
-  color: var(--text-color);
-  margin: 5px 0;
-}
-
-/* Button Styling for All Cards */
-.card-profile-card button,
-.card-tasks-card button,
-.card-vacation-card button,
-.card-terminal-card button,
-.card-time-card button {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  width: 100%;
-  background-color: var(--button-bg-color);
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px;
-  font-size: var(--text-size);
-  cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.2s ease;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.profile-actions button svg,
+.profile-button button svg {
+  margin-right: 10px; 
+  color: white;
 }
 
 /* Calendar card button styling */
@@ -224,7 +139,8 @@
   .card-vacation-card button,
   .card-terminal-card button,
   .card-time-card button,
-  .card-calendar-card button {
+  .card-calendar-card button,
+  .profile-button button {
     font-size: 0.9rem;
   }
 }
@@ -299,14 +215,16 @@
   gap: 10px;
   margin-top: 20px;
   border-top: 1px solid rgba(128, 128, 128, 0.384);
+  padding-top: 1.5rem;
 }
 
 .profile-actions button {
-  width: auto; 
-  padding: 10px;
-  font-size: var(--text-size);
+  background-color: #006400; /* Original color for profile actions buttons */
+  color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 30px;
+  padding: 0.5rem;
+  font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
   display: flex;
@@ -315,10 +233,23 @@
 }
 
 .profile-actions button:hover {
-  background-color: var(--button-hover-bg);
+  background-color: #05ad05;
   transform: scale(1.05);
 }
 
-.profile-actions button svg {
-  margin-right: 8px; /* Add space between icon and text */
+.profile-actions button:focus {
+  background-color: #05ad05;
+  transform: scale(1.20);
 }
+
+.profile-actions button:active {
+  background-color: #04a004; 
+  transform: scale(0.95); 
+}
+
+.profile-actions button svg,
+.profile-button button svg {
+  margin-right: 10px;
+  color: white;
+}
+
