modified:   zeiterfassung/src/components/Content/ActivityTrafficLight.jsx 	modified:   zeiterfassung/src/components/Content/CalendarCard.jsx 	new file:   zeiterfassung/src/components/Content/Components Css/calendar.css 	new file:   zeiterfassung/src/components/Content/Components Css/cards.css 	new file:   zeiterfassung/src/components/Content/Components Css/general.css 	new file:   zeiterfassung/src/components/Content/Components Css/profile.css 	deleted:    zeiterfassung/src/components/Content/General.css 	deleted:    zeiterfassung/src/components/Content/GeneralCards.css 	modified:   zeiterfassung/src/components/Content/ProfileCard.jsx 	modified:   zeiterfassung/src/components/Content/TasksCard.jsx 	modified:   zeiterfassung/src/components/Content/TimeAccountsCard.jsx 	modified:   zeiterfassung/src/components/Content/VacationCard.jsx 	deleted:    zeiterfassung/src/components/Content/calendar.css 	modified:   zeiterfassung/src/components/Content/dashboard.jsx 	modified:   zeiterfassung/src/components/Header/header.css 	modified:   zeiterfassung/src/components/Navigation/navigation.css

--- a/zeiterfassung/src/components/Navigation/navigation.css
+++ b/zeiterfassung/src/components/Navigation/navigation.css
@@ -1,3 +1,44 @@
+/*================================================================================================================================
+    File Name: navigation.css
+        Creator: Marvin S.
+        Date: 2021-09-30
+        Project: Navigation Styling
+        Description:  This is the CSS file for the navigation component. It contains the styling for the navigation bar and its components.
+        last update: 2021-10-01
+ ==================================================================================================================================*/
+
+/* Index 
+
+Row: | Name:
+
+     | Imports
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     |
+     | 
+     | 
+     | 
+     |
+     | 
+     | 
+     |
+     | 
+     |
+    !!ATTENTION ROW NUMBER CHANCHES WHEN ADDING NEW ITEMS HERE OR BETWEEN THE ROWS!!
+*/      
+
+
+ /*Imports */
+
+
+/* Navigation Styling */
+
 .nav {
   display: flex;
   justify-content: flex-start;
