--- a/zeiterfassung/src/components/Header/header.css
+++ b/zeiterfassung/src/components/Header/header.css
@@ -1,4 +1,45 @@
+/*================================================================================================================================
+    File Name: header.css
+        Creator: Marvin S.
+        Date: 2021-09-30
+        Project: Header Styling
+        Description:  This is the CSS file for the header component. It contains the styling for the header and its components.
+        last update: 2021-10-01
+ ==================================================================================================================================*/
+
+/* Index 
+
+Row: | Name:
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     | 
+     |
+     | 
+     | 
+     |
+     | 
+     |
+     !!ATTENTION ROW NUMBER CHANCHES WHEN ADDING NEW ITEMS HERE OR BETWEEN THE ROWS!!
+*/      
+
+
+ /*Imports */
+
+
+
+
 /* Styling for the header */
+
 .header {
   display: flex;
   justify-content: space-between;
