modified:   zeiterfassung/src/components/Content/ActivityTrafficLight.jsx 	modified:   zeiterfassung/src/components/Content/CalendarCard.jsx 	modified:   zeiterfassung/src/components/Content/ProfileCard.jsx 	renamed:    zeiterfassung/src/components/Content/Components Css/calendar.css -> zeiterfassung/src/components/Content/Styles/calendar.css 	renamed:    zeiterfassung/src/components/Content/Components Css/cards.css -> zeiterfassung/src/components/Content/Styles/cards.css 	renamed:    zeiterfassung/src/components/Content/Components Css/general.css -> zeiterfassung/src/components/Content/Styles/general.css 	renamed:    zeiterfassung/src/components/Content/Components Css/profile.css -> zeiterfassung/src/components/Content/Styles/profile.css 	modified:   zeiterfassung/src/components/Content/TasksCard.jsx 	modified:   zeiterfassung/src/components/Content/TimeAccountsCard.jsx 	modified:   zeiterfassung/src/components/Content/VacationCard.jsx

--- a/zeiterfassung/src/components/Content/Styles/general.css
+++ b/zeiterfassung/src/components/Content/Styles/general.css
@@ -8,6 +8,6 @@
  ==================================================================================================================================*/
 
 /* Imports */
-@import url('./components/Content/Components%20Css/calendar.css');
-@import url('./components/Content/Components%20Css/profile.css');
-@import url('./components/Content/Components%20Css/cards.css');
+@import url('./calendar.css');	
+@import url('./cards.css');
+@import url('profile.css');
