modified:   zeiterfassung/src/components/Content/Styles/calendar.css 	modified:   zeiterfassung/src/components/Content/Styles/cards.css 	modified:   zeiterfassung/src/components/Content/Styles/general.css

--- a/zeiterfassung/src/components/Content/Styles/calendar.css
+++ b/zeiterfassung/src/components/Content/Styles/calendar.css
@@ -28,7 +28,8 @@ Row: | Name:
      !!ATTENTION ROW NUMBER CHANCHES WHEN ADDING NEW ITEMS HERE OR BETWEEN THE ROWS!!
 */
 
- /*========>Imports<======== */
+ /*Imports*/
+
   /*========>Root Variables<========*/
   :root {
     --primary-color: #357ae8;
