--- a/zeiterfassung/src/components/Content/Styles/general.css
+++ b/zeiterfassung/src/components/Content/Styles/general.css
@@ -8,6 +8,6 @@
  ==================================================================================================================================*/
 
 /* Imports */
-@import url('./calendar.css');	
+@import url('./profile.css');	
 @import url('./cards.css');
-@import url('profile.css');
+@import url('./calendar.css');
