modified:   zeiterfassung/src/components/Content/Styles/calendar.css 	modified:   zeiterfassung/src/components/Content/Styles/cards.css 	modified:   zeiterfassung/src/components/Content/Styles/general.css 	modified:   zeiterfassung/src/components/Content/Styles/profile.css

--- a/zeiterfassung/src/components/Content/Styles/cards.css
+++ b/zeiterfassung/src/components/Content/Styles/cards.css
@@ -32,28 +32,6 @@ Row: | Name:
      !!ATTENTION ROW NUMBER CHANCHES WHEN ADDING NEW ITEMS HERE OR BETWEEN THE ROWS!!
 */      
 
- /*Imports */
- 
-/*========>Root Variables<========*/
-:root {
-  --primary-color: #357ae8;
-  --secondary-color: #234479;
-  --text-color: #555;
-  --card-bg-color: #ffffff;
-  --hover-bg-color: #e6f7ff;
-  --active-bg-color: #ffbf00;
-  --heading-size: 1.8rem;
-  --text-size: 1rem;
-  --border-radius: 10px;
-  --gap: 20px;
-  --max-width: 1200px;
-  --button-bg-color: #357ae8;
-  --button-hover-bg: #234479;
-  --button-focus-outline: #84c0ff;
-  --box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  --hover-box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-}
-
 /*========>Utility Classes<========*/
 .flex-center {
   display: flex;
@@ -78,6 +56,13 @@ Row: | Name:
   flex-direction: column;
   height: 100%;
 }
+
+/* .some-selector {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+ */
 
 /*========>Responsive Design<========*/
 @media (max-width: 900px) {
@@ -139,7 +124,6 @@ Row: | Name:
 .card-terminal-card button:hover,
 .card-time-card button:hover,
 .card-calendar-card button:hover,
-.card-profile-card button:focus,
 .card-tasks-card button:focus,
 .card-vacation-card button:focus,
 .card-terminal-card button:focus,
@@ -153,7 +137,6 @@ Row: | Name:
 
 
 /*========>Heading Styling<========*/
-.card-profile-card h2,
 .card-tasks-card h2,
 .card-vacation-card h2,
 .card-terminal-card h2,
@@ -181,8 +164,7 @@ Row: | Name:
 .card-tasks-card button,
 .card-vacation-card button,
 .card-terminal-card button,
-.card-time-card button,
-.profile-button button {
+.card-time-card button {
   font-size: 0.9rem;
   background-color: var(--button-bg-color); 
   color: white;
