--- a/zeiterfassung/src/components/Content/Styles/calendar.css
+++ b/zeiterfassung/src/components/Content/Styles/calendar.css
@@ -73,37 +73,33 @@ Row: | Name:
 /*========>Calendar card button styling<========*/
 
 .card-calendar-card button {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    width: 100%;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: var(--text-size);
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  /*========>Style for the calendar open button<========*/
-
-  .calendar-open-button {
-    background-color: var(--button-bg-color);
+    font-size: 0.9rem;
     color: white;
     border: none;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: var(--text-size);
+    border-radius: 30px;
+    padding: 0.5rem;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
   
+.card-calendar button:hover {
+  background-color: var(--button-hover-bg); 
+  transform: scale(1.05);
+}
+
+.card-calendar button:focus {
+  background-color: var(--button-hover-bg);
+  transform: scale(1.20);
+}
+
+.card-calendar button:active {
+  transform: scale(0.95); 
+}
+  /*========>Style for the calendar open button<========*/
+
   .calendar-open-button:hover {
     background-color: blue;
     transform: scale(1.05);
@@ -133,3 +129,33 @@ Row: | Name:
     transform: scale(1.05);
   }
   
+ 
+.card-calendar-card .open-calendar {
+  font-size: 0.9rem;
+  background-color: var(--button-bg-color);
+  margin-top: 1rem;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  padding: 0.5rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-calendar-card .open-calendar:hover {
+  background-color: var(--button-hover-bg); 
+  transform: scale(1.05);
+}
+
+.card-calendar-card .open-calendar:focus {
+  background-color: var(--button-hover-bg);
+  transform: scale(1.20);
+}
+
+.card-calendar-card .open-calendar:active {
+  transform: scale(0.95); 
+}
+
