--- a/Static-Site/src/App.css
+++ b/Static-Site/src/App.css
@@ -1,11 +1,27 @@
 /* Allgemeine Stile */
+html,
 body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  height: 100%;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   line-height: 1.6;
-  background-color: #f4f4f9;
   color: #333;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    61deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 1%,
+    rgba(15, 48, 193, 1) 10%,
+    rgba(6, 68, 160, 1) 34%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 
 a {
