--- a/Static-Site/src/App.css
+++ b/Static-Site/src/App.css
@@ -81,6 +81,33 @@ main h1 {
 
 main p {
   font-size: 1.2rem;
+  margin: 15px 15px auto;
+}
+
+.react-logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.react-logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 15px 15px 15px 15px;
+  width: 200px;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+}
+
+.react-logo:hover {
+  transform: scale(1.1);
+  border: 2px solid #007bff;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 /* Footer */
